src/test/ui/await-keyword/2018-edition-error.stderr
error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error.rs:5:13
   |
LL |     pub mod await {
   |             ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     pub mod r#await {
   |             ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error.rs:6:20
   |
LL |         pub struct await;
   |                    ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |         pub struct r#await;
   |                    ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error.rs:9:22
   |
LL | use self::outer_mod::await::await;
   |                      ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::r#await::await;
   |                      ^^^^^^^

error: expected identifier, found reserved keyword `await`
  --> $DIR/2018-edition-error.rs:9:29
   |
LL | use self::outer_mod::await::await;
   |                             ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use self::outer_mod::await::r#await;
   |                             ^^^^^^^

error: aborting due to 4 previous errors

